--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 										<h2><a>Sql and NoSql Database Comparison<br/></a></h2>
 									</header>
 									<a href="#" class="image "><img src="images/Database.gif" alt="" /></a>
-									<p style="text-align: center;">Compared the SQL and No SQL Databases using Mysql and MongoDB by implementing a TPCC like benchmark</p>
+									<p style="text-align: center;">Compared the SQL and No SQL Databases using Mysql and MongoDB by implementing a TPCC-like benchmark</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Source</a></li>
 									</ul>
