--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<!-- <span class="date">April 22, 2017</span> -->
 										<h2><a>A* Visualized<br/></a></h2>
 									</header>
-									<a class="image "><img src="images/AstarVisualized-mac.gif" alt="" /></a>
+									<a class="image fit"><img src="images/AstarVisualized-mac.gif" alt="" /></a>
 									<p style="text-align: center;">Visualization of A* algorithm on a Topographical Map</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pratikbhagwat/AStarAlgorithmVisualised" class="button">View Source</a></li>
@@ -100,7 +100,7 @@
 										<!-- <span class="date">April 22, 2017</span> -->
 										<h2><a>Reliable Data Transfer over RIP v2<br/></a></h2>
 									</header>
-									<a class="image "><img src="images/ripRouting.gif" alt="" /></a>
+									<a class="image fit"><img src="images/ripRouting.gif" alt="" /></a>
 									<p style="text-align: center;">
 										<ul>
 											<li>Implemented RIP v2 Distance Vector Routing Protocol</li>
@@ -116,29 +116,54 @@
 										<!-- <span class="date">April 22, 2017</span> -->
 										<h2><a>Sql and NoSql Database Comparison<br/></a></h2>
 									</header>
-									<a href="#" class="image "><img src="images/Database.gif" alt="" /></a>
+									<a class="image fit"><img src="images/Database.gif" alt="" /></a>
 									<p style="text-align: center;">Compared the SQL and No SQL Databases using Mysql and MongoDB by implementing a TPCC-like benchmark</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/pratikbhagwat/Relational-Database-Implementation" class="button">View Source</a></li>
 									</ul>
 								</article>
+
+								<article>
+									<header>
+										<!-- <span class="date">April 22, 2017</span> -->
+										<h2><a>Parallel Optimal Binary Search Tree<br/></a></h2>
+									</header>
+									<a class="image fit"><img src="images/binary-search-tree-sorted-array-animation.gif" alt="" /></a>
+									<p style="text-align: center;">Constructed an Optimal Binary search Tree parallelly using Shared memory paradigm of parallel computing</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/pratikbhagwat/ParallelOptimalBinarySearchTree" class="button">View Source</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<!-- <span class="date">April 22, 2017</span> -->
+										<h2><a>Cannon's Matrix Multiplication using JAVA OPEN MPI<br/></a></h2>
+									</header>
+									<a class="image fit"><img src="images/MatrixMultiplication.gif" alt="" /></a>
+									<p style="text-align: center;">Implemented Cannon's Matrix multiplication for a multi processor cluster using Message passing paradigm of parallel computing</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/pratikbhagwat/Cannons-Matrix-Multiplication-Using-MessagePassing" class="button">View Source</a></li>
+									</ul>
+								</article>
+
 								
 							</section>
 
 						<!-- Footer -->
-							<footer>
-								<div class="pagination">
+							<!-- <footer> -->
+								<!-- <div class="pagination"> -->
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
+									<!-- <a href="#" class="page active">1</a> -->
+									<!-- <a href="#" class="page">2</a> -->
+									<!-- <a href="#" class="page">3</a> -->
+									<!-- <span class="extra">&hellip;</span> -->
+									<!-- <a href="#" class="page">8</a> -->
+									<!-- <a href="#" class="page">9</a> -->
+									<!-- <a href="#" class="page">10</a>
 									<a href="#" class="next">Next</a>
 								</div>
-							</footer>
+							</footer> -->
 
 					</div>
 
