--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 							<li><a href="https://www.linkedin.com/in/pratik-bhagwat-5b8b30158/" class="icon brands fa-linkedin"><span class="label">GitHub</span></a></li>
 							<li><a href="https://github.com/pratikbhagwat" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="Pratik_Bhagwat_Resume_Software.pdf" class="fas fa-file-download" download><span class="label">Resume</span></a></li>
+							<li><a href="Pratik_Bhagwat_Resume.pdf" class="fas fa-file-download" download><span class="label">Resume</span></a></li>
 	
 						</ul>
 					</nav>
