--- a/elements.html
+++ b/elements.html
@@ -455,7 +455,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>9, River Meadow, Rochester, NY, ZIP: 14623<br />
+								<p>Somewhere in Pacific Northwest<br />
 								</p>
 							</section>
 							<section>
