--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 							<li><a href="https://www.linkedin.com/in/pratik-bhagwat-5b8b30158/" class="icon brands fa-linkedin"><span class="label">GitHub</span></a></li>
 							<li><a href="https://github.com/pratikbhagwat" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="Pratik_Bhagwat_Resume.pdf" class="fas fa-file-download" download><span class="label">Resume</span></a></li>
+							<li><a href="pratik_bhagwat_2024.pdf" class="fas fa-file-download" download><span class="label">Resume</span></a></li>
 	
 						</ul>
 					</nav>
@@ -146,81 +146,22 @@
 										<li><a href="https://github.com/pratikbhagwat/Cannons-Matrix-Multiplication-Using-MessagePassing" class="button">View Source</a></li>
 									</ul>
 								</article>
-
-								
 							</section>
-
-						<!-- Footer -->
-							<!-- <footer> -->
-								<!-- <div class="pagination"> -->
-									<!--<a href="#" class="previous">Prev</a>-->
-									<!-- <a href="#" class="page active">1</a> -->
-									<!-- <a href="#" class="page">2</a> -->
-									<!-- <a href="#" class="page">3</a> -->
-									<!-- <span class="extra">&hellip;</span> -->
-									<!-- <a href="#" class="page">8</a> -->
-									<!-- <a href="#" class="page">9</a> -->
-									<!-- <a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer> -->
 
 					</div>
 
-				<!-- Footer -->
 					<footer id="footer">
-						<!-- <section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section> -->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>9 , River Meadow Dr<br />
-								Rochester, NY 14623</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(585) 434-8075</a></p>
+								<p>Somewhere in the pacific northwest</p>
 							</section>
 							<section>
 								<h3>Email</h3>
 								<p><a href="mailto:pratikbhagwat4@gmail.com">pratikbhagwat4@gmail.com</a></p>
 							</section>
-							<!-- <section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section> -->
 						</section>
 					</footer>
-
-				<!-- Copyright -->
-					<!-- <div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div> -->
-
 			</div>
 
 		<!-- Scripts -->
