profile pic change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					
 					<div id="intro">
-						<img src="PratikProfile.png" alt="Avatar" id="introImage" >
+						<img src="PratikProfile.jpeg" alt="Avatar" id="introImage" >
 						<h2>Hello !<br />
 						I am Pratik</h2>
 						<p></p>
