Change the Project name

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a>Cannon's Matrix Multiplication using JAVA OPEN MPI<br/></a></h2>
+										<h2><a>Parallel Matrix Multiplication using JAVA OPEN MPI<br/></a></h2>
 									</header>
 									<a class="image fit"><img src="images/MatrixMultiplication.gif" alt="" /></a>
 									<p style="text-align: center;">Implemented Cannon's Matrix multiplication for a multi processor cluster using Message passing paradigm of parallel computing</p>
