--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 					
 					<div id="intro">
 						<img src="PratikProfile.jpeg" alt="Avatar" id="introImage" >
-						<h2>Hello !<br />
-						I am Pratik</h2>
-						<p></p>
+						<h2>Hello, I'm Pratik</h2>
+						<p>I've made some projects that you might find interesting</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -62,7 +61,7 @@
 									<h2>A Product Recommendation System</h2>
 									<p></p>
 								</header>
-								<a class="image main"><img src="images/ProductRecommendation.jpg" alt="" /></a>
+								< a class="image main"><img src="images/ProductRecommendation.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/pratikbhagwat/ProductRecomendation" class="button large">View Source</a></li>
 								</ul>
