--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2>A Product Recommendation System</h2>
-									<p></p>
+								<h2>A Product Recommendation System</h2>
 								</header>
-								<a class="image main"> <img src="images/ProductRecommendation.jpg" alt="" /></a>
+
+								<img src="images/ProductRecommendation.jpg" alt="" />
+
 								<ul class="actions special">
 									<li><a href="https://github.com/pratikbhagwat/ProductRecomendation" class="button large">View Source</a></li>
 								</ul>
