fixing the a tag

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 									<!-- <span class="date">April 25, 2017</span> -->
 								<h2>A Product Recommendation System</h2>
 								</header>
-
-								<img src="images/ProductRecommendation.jpg" alt="" />
-
+								<a class="image main"> <img src="images/ProductRecommendation.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/pratikbhagwat/ProductRecomendation" class="button large">View Source</a></li>
 								</ul>
